examples/neg/leakingtypevars.effekt
module leakingtypevars

def reader2[A] { p : => A / {} } : A / {} =
  p()

// (() => Int / {}): Int
def reader { p : => Int / {} } : Int / {} =
  p()

def parse[R] { p : => R / {} } =
  reader {
    p()
  }

def main() = ()
