examples/neg/leakingtypevars.check
examples/neg/leakingtypevars.effekt:12:5:error: Expected Int, but got R
    p()
    ^
